[metadata]
name = etcd3aio
version = attr: etcd3aio.__version__
license = Apache Software License 2.0
license_file = LICENSE.txt
description = Python client for the etcd3 API for asyncio
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Aleksei Gusev
author_email = aleksei.gusev@gmail.com
url = https://github.com/hron/etcd3aio
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3 :: Only
  Topic :: Database
  Topic :: Internet :: WWW/HTTP :: HTTP Servers
  Topic :: Software Development :: Libraries :: Python Modules
keywords = etcd, etcd3, asyncio, grpc

[options]
zip_safe = false
packages =
	etcd3aio
	etcd3aio.etcdrpc
python_requires = >=3.8
install_requires=
	grpclib==0.4.0
  h2==3.2.0
	tenacity==5.0.2
	protobuf==3.6.1

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
builtins = long
max-line-length = 100

[coverage:run]
omit = etcd3aio/etcdrpc/*
